k8s/overlays/prod/linkerd/driver-linkerd-annotation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: driver
spec:
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
        sidecar.signadot.com/inject: "true"
