k8s/overlays/prod/linkerd/frontend-linkerd-annotation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
        sidecar.signadot.com/inject: "true"
